# common_task_framework

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: actions.yml  develop.yml  latest.yml  main.yml  pull_request.yml
common_task_framework/: __init__.py  init.py  main.py  referee.py
examples/pollos_petrel/: complete_dataset.csv
spec/: cli_spec.sh
src/: .bash_aliases  geci-ctf
tests/: cli_spec.sh  test_init.py  test_referee.py  test_referee_dataset1.py  test_referee_dataset2.py  test_referee_dataset3.py  test_referee_dataset_incomplete_submission.py  test_referee_dataset_na.py  test_referee_dataset_pollos_petrel.py  test_referee_dataset_simple.py
tests/test_data/: test2_submission.csv
tests/test_dataset2/: test2_submission.csv  test_b_submission.csv  test_submission.csv
tests/test_dataset_incomplete_submission/: incomplete_submission.csv  overfull_submission.csv  unexpected_submission.csv
tests/test_dataset_na/: complete_dataset.csv
tests/test_dataset_simple/: complete_dataset.csv
